--- a/style.css
+++ b/style.css
@@ -12,5 +12,7 @@ p {
     font-family: cursive;
     section{
         background: rgb(184, 156, 213);
+        padding-bottom: 80px;
+        padding-top: 80px;
     }
 }
