--- a/style.css
+++ b/style.css
@@ -16,5 +16,9 @@ p {
         padding-top: 80px;
         display: flex;
         justify-content: center;
-    }
+            }
+            .chamada-texto{
+                margin-right: 5%;
+            }
+    
 }
